# Agreste-Game-Engine

./: .gitignore  LICENSE  README.md  working.patch
Agreste-Game-Engine/: Agreste-Game-Engine.sln
Agreste-Game-Engine/Agreste-Game-Engine/: .gitattributes  Agreste-Game-Engine.vcxproj  Agreste-Game-Engine.vcxproj.filters  Array.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraMovement.h  Cubemap.cpp  Cubemap.h  Drawer.cpp  Drawer.h  GameBoard.cpp  GameBoard.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Shader.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  TransformVertexShader.vertexshader  World.h  core.fs  core.vs  lamp.fs  lamp.fs~Stashed changes  lamp.vs  lamp.vs~Stashed changes  lighting.fs  lighting.vs  objloader.cpp  objloader.hpp  platform.mtl  (+7 more)
Agreste-Game-Engine/Agreste-Game-Engine/Debug/: vc141.idb
Agreste-Game-Engine/Agreste-Game-Engine/Debug/Agreste-.FB80C1CB.tlog/: Agreste-Game-Engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Agreste-Game-Engine/Agreste-Game-Engine/images/: cubeElementExemple.mtl  cubeElementExemple2.mtl  platformUp.mtl
Agreste-Game-Engine/Agreste-Game-Engine/x64/Debug/: vc141.idb
Agreste-Game-Engine/Agreste-Game-Engine/x64/Debug/Agreste-.FB80C1CB.tlog/: Agreste-Game-Engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Agreste-Game-Engine/Dependencies/libs/: assimp-vc141-mtd.exp  glew32sd.lib  soil2-debug.lib
(+1 files in other folders)
